[gd_scene load_steps=44 format=2]

[ext_resource path="res://Parallax/Asset/Enemy/Drone/move without FX.png" type="Texture" id=1]
[ext_resource path="res://Parallax/Asset/Enemy/Drone/move with FX.png" type="Texture" id=2]
[ext_resource path="res://Parallax/Asset/Enemy/Drone/death.png" type="Texture" id=3]
[ext_resource path="res://Parallax/script/Drone.gd" type="Script" id=4]
[ext_resource path="res://Parallax/Asset/Enemy/Drone/charge.png" type="Texture" id=5]
[ext_resource path="res://Parallax/Asset/Enemy/Drone/shoot with FX.png" type="Texture" id=6]
[ext_resource path="res://Parallax/Asset/Enemy/Drone/damaged.png" type="Texture" id=7]
[ext_resource path="res://Audio/SFX/Drone.mp3" type="AudioStream" id=8]
[ext_resource path="res://Audio/SFX/Drone_get_hit.mp3" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 5 )
region = Rect2( 9, 0, 36, 26 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 5 )
region = Rect2( 9, 26, 36, 26 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 5 )
region = Rect2( 9, 52, 36, 26 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 5 )
region = Rect2( 9, 78, 36, 26 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 6 )
region = Rect2( 9, 0, 47, 26 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 6 )
region = Rect2( 9, 26, 47, 26 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 6 )
region = Rect2( 9, 52, 47, 26 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 6 )
region = Rect2( 9, 78, 47, 26 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 7 )
region = Rect2( 14, 0, 22, 26 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 7 )
region = Rect2( 14, 26, 22, 26 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 4, 0, 37, 26 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 4, 26, 37, 26 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 4, 52, 37, 26 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 4, 78, 37, 26 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 4, 104, 37, 26 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 4, 130, 37, 26 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 10, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 10, 26, 26, 26 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 10, 52, 26, 26 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 10, 78, 26, 26 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 10, 104, 26, 26 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 10, 130, 26, 26 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 10, 156, 26, 26 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 10, 182, 26, 26 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 3, 0, 38, 26 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 3, 26, 38, 26 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 3, 52, 38, 26 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 3, 78, 38, 26 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 3, 104, 38, 26 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 3, 130, 38, 26 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 3, 156, 38, 26 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 2 )
region = Rect2( 3, 182, 38, 26 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 79 ), SubResource( 79 ), SubResource( 79 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 83 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
}, {
"frames": [ SubResource( 84 ), SubResource( 85 ) ],
"loop": true,
"name": "Damaged",
"speed": 7.0
}, {
"frames": [ SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": false,
"name": "Death",
"speed": 6.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "Running",
"speed": 6.0
} ]

[node name="Drone" type="KinematicBody2D"]
position = Vector2( 2000, 450 )
script = ExtResource( 4 )

[node name="Drone_col" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Drone_anim" type="AnimatedSprite" parent="."]
scale = Vector2( 3.97112, 3.81542 )
frames = SubResource( 11 )
animation = "Attack"
frame = 14
speed_scale = 1.5
playing = true

[node name="Energy_gun1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 1.0
bus = "music"

[node name="Energy_gun2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 1.0

[node name="get_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[connection signal="animation_finished" from="Drone_anim" to="." method="_on_Drone_anim_animation_finished"]
